# MyEngine

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doxygenoutput/html/: _asteroid_behavior_8cpp.html  _asteroid_behavior_8h.html  _asteroid_behavior_8h_source.html  _asteroid_spawner_8cpp.html  _asteroid_spawner_8h.html  _asteroid_spawner_8h_source.html  _audio_player_8cpp.html  _audio_player_8h.html  _audio_player_8h_source.html  _background_color_8cpp.html  _background_color_8h.html  _background_color_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _collider_8cpp.html  _collider_8h.html  _collider_8h_source.html  _component_8cpp.html  _component_8h.html  _component_8h_source.html  _core_8cpp.html  _core_8h.html  _core_8h_source.html  _cubemap_texture_8cpp.html  _cubemap_texture_8h.html  _cubemap_texture_8h_source.html  _entity_8cpp.html  _entity_8h.html  _entity_8h_source.html  _environment_8cpp.html  _environment_8h.html  _environment_8h_source.html  _input_8cpp.html  _input_8h.html  _input_8h_source.html  _mesh_8cpp.html  _mesh_8h.html  _mesh_8h_source.html  _mesh_renderer_8cpp.html  (+197 more)
doxygenoutput/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  (+46 more)
doxygenoutput/latex/: _asteroid_behavior_8cpp.tex  _asteroid_behavior_8h.tex  _asteroid_spawner_8cpp.tex  _asteroid_spawner_8h.tex  _audio_player_8cpp.tex  _audio_player_8h.tex  _background_color_8cpp.tex  _background_color_8h.tex  _camera_8cpp.tex  _camera_8h.tex  _collider_8cpp.tex  _collider_8h.tex  _component_8cpp.tex  _component_8h.tex  _core_8cpp.tex  _core_8h.tex  _cubemap_texture_8cpp.tex  _cubemap_texture_8h.tex  _entity_8cpp.tex  _entity_8h.tex  _environment_8cpp.tex  _environment_8h.tex  _input_8cpp.tex  _input_8h.tex  _mesh_8cpp.tex  _mesh_8h.tex  _mesh_renderer_8cpp.tex  _mesh_renderer_8h.tex  _model_8cpp.tex  _model_8h.tex  _my_engine_8h.tex  _player_controller_8cpp.tex  _player_controller_8h.tex  _pooler_8cpp.tex  _pooler_8h.tex  _prefab_8cpp.tex  _prefab_8h.tex  _projectile_behavior_8cpp.tex  _projectile_behavior_8h.tex  _resource_8cpp.tex  (+105 more)
resources/fragmentshaders/: fragmenttest.fs  skybox.fs  texui.fs
resources/vertexshaders/: collider.vs  skybox.vs  texui.vs  tritest.vs  untexui.vs  vertextest.vs
src/game/: AsteroidBehavior.cpp  AsteroidBehavior.h  AsteroidSpawner.cpp  AsteroidSpawner.h  PlayerController.cpp  PlayerController.h  ProjectileBehavior.cpp  ProjectileBehavior.h  main.cpp
src/myengine/: AsteroidBehavior.cpp  AsteroidBehavior.h  AsteroidSpawner.cpp  AsteroidSpawner.h  AudioPlayer.cpp  AudioPlayer.h  BackgroundColor.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Core.cpp  Core.h  CubemapTexture.cpp  CubemapTexture.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  MyEngine.h  PlayerController.cpp  PlayerController.h  Pooler.cpp  Pooler.h  Prefab.cpp  Prefab.h  ProjectileBehavior.cpp  ProjectileBehavior.h  Resource.cpp  Resource.h  (+20 more)
(+1 files in other folders)
